@@ -19,7 +19,6 @@ package org.graylog2.contentpacks.facades;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.jsontype.NamedType;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.graph.Graph;
@@ -48,7 +47,7 @@ import org.graylog.plugins.views.search.views.widgets.aggregation.AggregationCon
 import org.graylog.plugins.views.search.views.widgets.aggregation.AutoIntervalDTO;
 import org.graylog.plugins.views.search.views.widgets.aggregation.TimeHistogramConfigDTO;
 import org.graylog.plugins.views.search.views.widgets.messagelist.MessageListConfigDTO;
-import org.graylog.security.entities.EntityOwnershipService;
+import org.graylog.security.entities.EntityRegistrar;
 import org.graylog.testing.mongodb.MongoDBFixtures;
 import org.graylog.testing.mongodb.MongoDBInstance;
 import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
@@ -71,13 +70,14 @@ import org.graylog2.contentpacks.model.entities.ViewStateEntity;
 import org.graylog2.contentpacks.model.entities.references.ValueReference;
 import org.graylog2.database.MongoCollections;
 import org.graylog2.database.MongoConnection;
+import org.graylog2.database.entities.source.EntitySourceService;
 import org.graylog2.plugin.cluster.ClusterConfigService;
 import org.graylog2.plugin.indexer.searches.timeranges.KeywordRange;
 import org.graylog2.security.PasswordAlgorithmFactory;
 import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
 import org.graylog2.shared.security.Permissions;
 import org.graylog2.shared.users.UserService;
-import org.graylog2.streams.StreamImpl;
+import org.graylog2.streams.StreamMock;
 import org.graylog2.users.UserImpl;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
@@ -86,6 +86,7 @@ import org.junit.Rule;
 import org.junit.Test;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -111,7 +112,7 @@ public class ViewFacadeTest {
         protected TestViewService(ClusterConfigService clusterConfigService,
                                   MongoCollections mongoCollections) {
             super(clusterConfigService,
-                    dto -> new ViewRequirements(Collections.emptySet(), dto), mock(EntityOwnershipService.class), mock(ViewSummaryService.class), mongoCollections);
+                    dto -> new ViewRequirements(Collections.emptySet(), dto), mock(EntityRegistrar.class), mock(ViewSummaryService.class), mock(EntitySourceService.class), mongoCollections);
         }
     }
 
@@ -129,7 +130,7 @@ public class ViewFacadeTest {
     private final String newStreamId = "5def958063303ae5f68ebeaf";
     private final String streamId = "5cdab2293d27467fbe9e8a72"; /* stored in database */
     private UserService userService;
-
+    private EntityRegistrar entityRegistrar;
 
     @Before
     public void setUp() {
@@ -153,8 +154,9 @@ public class ViewFacadeTest {
         viewService = new TestViewService(null, mongoCollections);
         viewSummaryService = new TestViewSummaryService(mongoCollections);
         userService = mock(UserService.class);
+        entityRegistrar = mock(EntityRegistrar.class);
 
-        facade = new SearchFacade(objectMapper, searchDbService, viewService, viewSummaryService, userService);
+        facade = new SearchFacade(objectMapper, searchDbService, viewService, viewSummaryService, userService, entityRegistrar);
     }
 
     @Test
@@ -229,11 +231,11 @@ public class ViewFacadeTest {
     @Test
     @MongoDBFixtures("ViewFacadeTest.json")
     public void itShouldCreateADTOFromAnEntity() throws Exception {
-        final StreamImpl stream = new StreamImpl(Collections.emptyMap());
+        final StreamMock stream = new StreamMock(Collections.emptyMap());
         final Entity viewEntity = createViewEntity();
         final Map<EntityDescriptor, Object> nativeEntities = Map.of(EntityDescriptor.create(newStreamId, ModelTypes.STREAM_V1), stream);
-        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(ImmutableSet.of()),
-                mock(ClusterConfigService.class), ImmutableMap.of("username", "testuser"));
+        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(Set.of()),
+                mock(ClusterConfigService.class), new ObjectMapperProvider().get(), ImmutableMap.of("username", "testuser"));
         when(userService.load("testuser")).thenReturn(fakeUser);
         final NativeEntity<ViewDTO> nativeEntity = facade.createNativeEntity(viewEntity,
                 Collections.emptyMap(), nativeEntities, "testuser");
@@ -281,12 +283,13 @@ public class ViewFacadeTest {
                 ValueReference.of("description"),
                 ValueReference.of(false),
                 ValueReference.of("matching-type"),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableSet.of(),
+                List.of(),
+                List.of(),
+                List.of(),
+                Set.of(),
                 ValueReference.of(false),
-                ValueReference.of(true)
+                ValueReference.of(true),
+                List.of()
         );
         return EntityV1.builder()
                 .id(ModelId.of(newStreamId))
@@ -305,16 +308,16 @@ public class ViewFacadeTest {
         final SearchEntity searchEntity = SearchEntity.builder()
                 .queries(ImmutableSet.of(query))
                 .parameters(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .requires(Map.of())
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
         final ViewStateEntity viewStateEntity = ViewStateEntity.builder()
-                .fields(ImmutableSet.of())
+                .fields(Set.of())
                 .titles(Titles.empty())
-                .widgets(ImmutableSet.of())
-                .widgetMapping(ImmutableMap.of())
-                .widgetPositions(ImmutableMap.of())
-                .formatting(FormattingSettings.builder().highlighting(ImmutableSet.of()).build())
+                .widgets(Set.of())
+                .widgetMapping(Map.of())
+                .widgetPositions(Map.of())
+                .formatting(FormattingSettings.builder().highlighting(Set.of()).build())
                 .displayModeSettings(DisplayModeSettings.empty())
                 .build();
         String newViewId = "5def958063303ae5f68edead";
@@ -324,8 +327,8 @@ public class ViewFacadeTest {
                 .title(ValueReference.of("title"))
                 .description(ValueReference.of("description"))
                 .search(searchEntity)
-                .properties(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .properties(Set.of())
+                .requires(Map.of())
                 .state(ImmutableMap.of(newViewId, viewStateEntity))
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
